Devices: Fixing search form on small devices

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -11688,23 +11688,23 @@ img {
 
 /* Main navigation
 -------------------------------------------------- */
-/* line 43, ../sass/base/_header.scss */
+/* line 42, ../sass/base/_header.scss */
 #main_navigation_wrap {
   background-color: #FFFFFF;
   border-bottom: solid 1px #cccccc;
   height: 50px;
 }
 
-/* line 49, ../sass/base/_header.scss */
+/* line 48, ../sass/base/_header.scss */
 #main_navigation {
   position: relative;
   line-height: 50px;
 }
-/* line 52, ../sass/base/_header.scss */
+/* line 51, ../sass/base/_header.scss */
 #main_navigation .main-nav-text {
   display: none;
 }
-/* line 55, ../sass/base/_header.scss */
+/* line 54, ../sass/base/_header.scss */
 #main_navigation a {
   display: inline-block;
   padding: 0 10px;
@@ -11714,39 +11714,39 @@ img {
   /* MAX WIDTH */
 }
 @media only screen and (min-width: 768px) {
-  /* line 55, ../sass/base/_header.scss */
+  /* line 54, ../sass/base/_header.scss */
   #main_navigation a {
     padding: 0 20px;
   }
 }
-/* line 64, ../sass/base/_header.scss */
+/* line 63, ../sass/base/_header.scss */
 #main_navigation a:hover {
   background-color: #bfbfbf;
   text-decoration: none;
 }
-/* line 68, ../sass/base/_header.scss */
+/* line 67, ../sass/base/_header.scss */
 #main_navigation .active {
   background-color: #cccccc;
   color: #e6e6e6;
 }
 
-/* line 74, ../sass/base/_header.scss */
+/* line 73, ../sass/base/_header.scss */
 #header_logo {
   max-height: 40px;
   max-width: 100px;
 }
 
-/* line 79, ../sass/base/_header.scss */
+/* line 78, ../sass/base/_header.scss */
 #navigation_left {
   position: absolute;
 }
 
-/* line 83, ../sass/base/_header.scss */
+/* line 82, ../sass/base/_header.scss */
 #navigation_right {
   float: right;
 }
 
-/* line 87, ../sass/base/_header.scss */
+/* line 86, ../sass/base/_header.scss */
 #navi_settings {
   border-radius: 4px;
   height: 40px;
@@ -11756,40 +11756,40 @@ img {
   /* MAX WIDTH */
 }
 @media only screen and (min-width: 768px) {
-  /* line 87, ../sass/base/_header.scss */
+  /* line 86, ../sass/base/_header.scss */
   #navi_settings {
     margin-right: 15px;
   }
 }
 
-/* line 97, ../sass/base/_header.scss */
+/* line 96, ../sass/base/_header.scss */
 .navi-time-link {
   cursor: pointer;
 }
 
-/* line 101, ../sass/base/_header.scss */
+/* line 100, ../sass/base/_header.scss */
 .navi-time {
   padding-left: 10px;
 }
 
-/* line 105, ../sass/base/_header.scss */
+/* line 104, ../sass/base/_header.scss */
 .mobile-icon {
   padding-left: 7px;
   color: #333333;
 }
-/* line 108, ../sass/base/_header.scss */
+/* line 107, ../sass/base/_header.scss */
 .mobile-icon .fa {
   font-size: 16px;
 }
 
 /* Subnavigation
 -------------------------------------------------- */
-/* line 117, ../sass/base/_header.scss */
+/* line 115, ../sass/base/_header.scss */
 #sub_navigation {
   position: relative;
 }
 
-/* line 122, ../sass/base/_header.scss */
+/* line 120, ../sass/base/_header.scss */
 #sub_navigation_in ul {
   padding: 0;
   list-style: none;
@@ -11805,30 +11805,30 @@ img {
   /* MAX WIDTH */
 }
 @media only screen and (min-width: 768px) {
-  /* line 122, ../sass/base/_header.scss */
+  /* line 120, ../sass/base/_header.scss */
   #sub_navigation_in ul {
     margin: 0 0 0 50%;
   }
 }
 @media only screen and (min-width: 1024px) and (orientation: landscape) {
-  /* line 122, ../sass/base/_header.scss */
+  /* line 120, ../sass/base/_header.scss */
   #sub_navigation_in ul {
     margin: 0 0 0 66%;
   }
 }
-/* line 135, ../sass/base/_header.scss */
+/* line 133, ../sass/base/_header.scss */
 #sub_navigation_in ul li {
   /* MIN WIDTH */
   /* MAX WIDTH */
   border-bottom: solid 1px #cccccc;
 }
 @media only screen and (min-width: 768px) {
-  /* line 135, ../sass/base/_header.scss */
+  /* line 133, ../sass/base/_header.scss */
   #sub_navigation_in ul li {
     padding: 10px 0;
   }
 }
-/* line 140, ../sass/base/_header.scss */
+/* line 138, ../sass/base/_header.scss */
 #sub_navigation_in ul li a {
   display: block;
   position: relative;
@@ -11839,34 +11839,34 @@ img {
   /* MAX WIDTH */
 }
 @media only screen and (min-width: 768px) {
-  /* line 140, ../sass/base/_header.scss */
+  /* line 138, ../sass/base/_header.scss */
   #sub_navigation_in ul li a {
     padding: 0 10px;
   }
 }
-/* line 149, ../sass/base/_header.scss */
+/* line 147, ../sass/base/_header.scss */
 #sub_navigation_in ul li a span {
   display: inline-block;
   position: absolute;
   left: 50px;
 }
-/* line 155, ../sass/base/_header.scss */
+/* line 153, ../sass/base/_header.scss */
 #sub_navigation_in ul li .subnavi-arrow {
   position: absolute;
   right: 1%;
   display: inline-block;
 }
-/* line 162, ../sass/base/_header.scss */
+/* line 160, ../sass/base/_header.scss */
 #sub_navigation_in ul .active a {
   color: #b3b3b3;
   font-weight: bold;
   text-decoration: underline;
 }
-/* line 167, ../sass/base/_header.scss */
+/* line 165, ../sass/base/_header.scss */
 #sub_navigation_in ul .active .fa {
   color: #b3b3b3;
 }
-/* line 171, ../sass/base/_header.scss */
+/* line 169, ../sass/base/_header.scss */
 #sub_navigation_in ul .fa {
   color: #666666;
 }
@@ -11876,7 +11876,7 @@ img {
 /* MIN WIDTH */
 /* MAX WIDTH */
 @media only screen and (max-width: 767px) {
-  /* line 181, ../sass/base/_header.scss */
+  /* line 179, ../sass/base/_header.scss */
   .fix-me-top {
     width: 90%;
     z-index: 2500;
@@ -11887,8 +11887,18 @@ img {
     left: 0;
     padding: 5px;
     height: 50px;
+    /* MIN WIDTH */
+    /* MAX WIDTH */
   }
 }
+@media only screen and (max-width: 767px) and (max-width: 767px) {
+  /* line 190, ../sass/base/_header.scss */
+  .fix-me-top input[type="text"] {
+    min-height: 20px;
+    padding: 6px 8px;
+  }
+}
+
 /* Footer
 -------------------------------------------------- */
 /* line 4, ../sass/base/_footer.scss */
